force-app/main/default/objects/Integration_Request_Mapping__mdt/Integration_Request_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Integration Request Mapping</label>
    <pluralLabel>Integration Request Mappings</pluralLabel>
</CustomObject>