force-app/main/default/objects/Integration_Request_Mapping__mdt/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <description>Data Type of the Field.</description>
    <label>Data Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>