force-app/main/default/objects/Integration_Request_Mapping__mdt/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description>API Field Name of the Field.</description>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>