force-app/main/default/objects/Integration_Request_Mapping__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This helps in identifying the active records to be considered for the JSON Request.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>