force-app/main/default/objects/Integration_Request_Mapping__mdt/fields/Is_Node__c.field-meta.xml
<CustomField>
    <fullName>Is_Node__c</fullName>
    <description>This helps for the creation of the nested JSON.</description>
    <label>Is Node</label>
    <length>255</length>
    <type>Text</type>
</CustomField>