force-app/main/default/objects/Integration_Request_Mapping__mdt/fields/Is_Parent__c.field-meta.xml
<CustomField>
    <fullName>Is_Parent__c</fullName>
    <description>This helps in identifying the parent for the JSON.</description>
    <label>Is Parent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>