force-app/main/default/objects/Integration_Request_Mapping__mdt/fields/Is_State__c.field-meta.xml
<CustomField>
    <fullName>Is_State__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It helps in identifying the state.</description>
    <label>Is State</label>
    <type>Checkbox</type>
</CustomField>