force-app/main/default/objects/Integration_Request_Mapping__mdt/fields/JSON_field_name__c.field-meta.xml
<CustomField>
    <fullName>JSON_field_name__c</fullName>
    <description>It holds the JSON name value of the field.</description>
    <label>JSON field name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>