force-app/main/default/objects/Integration_Request_Mapping__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>It holds the Object name of the field.</description>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>