force-app/main/default/objects/Integration_Request_Mapping__mdt/fields/Parent_Node__c.field-meta.xml
<CustomField>
    <fullName>Parent_Node__c</fullName>
    <label>Parent Node</label>
    <length>255</length>
    <type>Text</type>
</CustomField>