force-app/main/default/objects/Integration_Request_Mapping__mdt/fields/Used_for__c.field-meta.xml
<CustomField>
    <fullName>Used_for__c</fullName>
    <description>Interface Details</description>
    <label>Used for</label>
    <length>255</length>
    <type>Text</type>
</CustomField>