force-app/main/default/objects/Integration_Request_Mapping__mdt/listViews/Dynamic_JSON.listView-meta.xml
<ListView>
    <fullName>Dynamic_JSON</fullName>
    <columns>MasterLabel</columns>
    <columns>Data_Type__c</columns>
    <columns>Field_Name__c</columns>
    <columns>JSON_field_name__c</columns>
    <columns>Object_Name__c</columns>
    <columns>Sequence__c</columns>
    <columns>Used_for__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>Dynamic JSON</label>
</ListView>